# Translatio

./: .gitignore  README.md  pyproject.toml
scraper/biobio/: items.py  pipelines.py  run_sitemap.py  settings.py
scraping/: permissions.sh  run_biobio_crawler.sh
scraping/biobio/biobio/: items.py  middlewares.py  pipelines.py  run_sitemap.py  settings.py
scraping/biobio/biobio/spiders/: biobio_crawler.py  biobio_sitemap.py  biobiochile.py  biobiochile_sitemap.py
