[tool.poetry]
name = "translatio"
version = "0.1.0"
description = ""
authors = ["Luciano Montanares <lmontanareso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
parsel = "^1.8.1"
scrapy = "^2.9.0"
scrapy-fake-useragent = "^1.4.4"
pandas = "^2.0.3"
scrapy-sql = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
